--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "package": "^1.0.1",
     "readline-sync": "^1.4.10"
   },
-  "bin": {
-    "brain-games": "bin/brain-games.js"
+"bin": {
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
   },
   "type": "module",
   "devDependencies": {},
